--- a/#. Code/capstone-project-original-dataset.ipynb
+++ b/#. Code/capstone-project-original-dataset.ipynb
@@ -348,9 +348,8 @@
     "\n",
     "visualize(                                                                  #visualize the image and mask\n",
     "    original_image = image,                                                 #original image\n",
-    "    ground_truth_mask =\n",
-    "        colour_code_segmentation(\n",
-    "                reverse_one_hot(mask), select_class_rgb_values),            #ground truth mask\n",
+    "    #ground truth mask\n",
+    "    ground_truth_mask = colour_code_segmentation(reverse_one_hot(mask), select_class_rgb_values),\n",
     "    one_hot_encoded_mask = reverse_one_hot(mask)                            #one-hot encoded mask\n",
     ")"
    ]
@@ -428,9 +427,8 @@
     "    image, mask = augmented_dataset[idx]                        #get the image and mask at the index\n",
     "    visualize(                                                  #visualize the image and mask\n",
     "        original_image = image,                                 #original image\n",
-    "        ground_truth_mask =\n",
-    "            colour_code_segmentation(\n",
-    "                reverse_one_hot(mask),select_class_rgb_values), #ground truth mask\n",
+    "        #ground truth mask\n",
+    "        ground_truth_mask = colour_code_segmentation(reverse_one_hot(mask),select_class_rgb_values),\n",
     "        one_hot_encoded_mask = reverse_one_hot(mask)            #one-hot encoded mask\n",
     "    )"
    ]
@@ -608,7 +606,8 @@
    },
    "outputs": [],
    "source": [
-    "%%time                                                      #measure the time taken to train the model\n",
+    "#measure the time taken to train the model\n",
+    "%%time\n",
     "\n",
     "if TRAINING:                                                #if TRAINING is True\n",
     "\n",
@@ -700,9 +699,8 @@
     "\n",
     "visualize(                                                  #visualize the image and mask\n",
     "    original_image = image,                                 #original image\n",
-    "    ground_truth_mask =\n",
-    "        colour_code_segmentation(\n",
-    "            reverse_one_hot(mask), select_class_rgb_values),#ground truth mask\n",
+    "    #ground truth mask\n",
+    "    ground_truth_mask = colour_code_segmentation(reverse_one_hot(mask), select_class_rgb_values),\n",
     "    one_hot_encoded_mask = reverse_one_hot(mask)            #one-hot encoded mask\n",
     ")\n"
    ]
@@ -754,17 +752,12 @@
     "    pred_mask = np.transpose(pred_mask,(1,2,0))\n",
     "    # Get prediction channel corresponding to foreground\n",
     "    pred_road_heatmap = pred_mask[:,:,select_classes.index('road')]  #get the prediction channel corresponding to the road class\n",
-    "    pred_mask =\n",
-    "        colour_code_segmentation(\n",
-    "            reverse_one_hot(pred_mask), select_class_rgb_values)     #colour code the segmentation mask\n",
+    "    pred_mask = colour_code_segmentation(reverse_one_hot(pred_mask), select_class_rgb_values)     #colour code the segmentation mask\n",
     "    # Convert gt_mask from `CHW` format to `HWC` format\n",
     "    gt_mask = np.transpose(gt_mask,(1,2,0))                          #transpose the ground truth mask\n",
-    "    gt_mask =\n",
-    "        colour_code_segmentation(\n",
-    "                reverse_one_hot(gt_mask), select_class_rgb_values)   #colour code the ground truth mask\n",
-    "    cv2.imwrite(os.path.join\n",
-    "        sample_preds_folder, f\"sample_pred_{idx}.png\"),\n",
-    "        np.hstack([image_vis, gt_mask, pred_mask])[:,:,::-1])        #save the image, ground truth mask and predicted mask\n",
+    "    gt_mask = colour_code_segmentation(reverse_one_hot(gt_mask), select_class_rgb_values)   #colour code the ground truth mask\n",
+    "    #save the image, ground truth mask and predicted mask\n",
+    "    cv2.imwrite(os.path.join(sample_preds_folder, f\"sample_pred_{idx}.png\"),np.hstack([image_vis, gt_mask, pred_mask])[:,:,::-1])\n",
     "    \n",
     "    visualize(                                                       #visualize the image, ground truth mask and predicted mask\n",
     "        original_image = image_vis,                                  #original image\n",
